--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/Amitk7388/Naamras2"
   }
 }
